--- a/_posts/2018-02-12-testpost.md
+++ b/_posts/2018-02-12-testpost.md
@@ -2,7 +2,7 @@
 layout: post
 title: test
 excerpt: "test1"
-modified: 3/10/2016, 12:00:24
+modified: 2018-02-12, 12:00:24
 tags: [testing, example2]
 comments: true
 category: blog
