New image paths

--- a/_posts/2017-02-07-GP2GC-I.md
+++ b/_posts/2017-02-07-GP2GC-I.md
@@ -2,13 +2,14 @@
 layout: post
 title: Grandparents to the Grand Canyon
 excerpt: "Part I: Making plans and heading west"
-modified: 2018-02-06, 13:45:00
+date: 2018-02-07, 13:00:00
+modified: 2018-02-16, 13:45:00
 tags: [GP2GC]
 comments: true
 category: blog
 ---
 
-![Title slide GP2GC]("C:\Users\Caleb\Pictures\GP2GC\GP2GC.png")
+![Title slide GP2GC]("/images/GP2GC/GP2GC.png")
 
 ## Setting the stage(coach)
 
@@ -19,12 +20,10 @@ I had the privilege of visiting the national park on a whirlwind trip with my fu
 I hoped in some way it would be received without hesitation but knew there would be a myriad of excuses of why they shouldn't leave to go adventuring in far away lands. (To my later discovery, Poppa had never been more than a couple hundred miles from where he was born and raised and my Nana hadn't ventured much further).
 
 > "Who will check on so-and-so? Who will tend to the garden? What about church bread?" (My grandparents' Church observes the Lord's Supper weekly, so someone must prepare unleavened bread for the ceremony.)
-
-So-and-so has other friends. God and siblings can tend the garden. And, the other saints are very capable of following your recipe.
+_So-and-so has other friends. God and siblings can tend the garden. And, the other saints are very capable of following your recipe._
 
 > "When will we even go? How will we get there? Who will go with us?"
-
-In the summer; train, plane, bus, or boat; anyone you need to get you there. I of course wanted and planned to go with them all along.
+_In the summer; train, plane, bus, or boat; anyone you need to get you there. I of course wanted and planned to go with them all along._
 
 The questions and excuses steadily faded as plans materialized. First week of August, by vehicle, eight (sometimes nine) trip-goers, and excitement all around.
 
@@ -41,5 +40,5 @@ At this point plans have been made and bags are almost packed when Poppa shows c
 
 The first leg of the trip would get us to Amarillo, TX and be the most drastic change in vegetation for the time/distance traveled. It became really apparent the morning of day two when light allowed us to really take in the scrub type landscape. (I really wish I would have taken more pictures of the trip out).
 
-![On the road]("F:\Camera\IMG_20160730_165214460_HDR.jpg")
+![On the road]("/images/GP2GC/heading-west.jpg")
 *Just west of Amarillo, TX; day 2*
