--- a/_posts/2018-02-12-testpost.md
+++ b/_posts/2018-02-12-testpost.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: test
-excerpt: "test1"
-modified: 2018-02-12, 12:00:24
+title: Grandparents to the Grand Canyon
+excerpt: "Part II: Arrival at Grand Canyon National Park"
+date: 2018-02-14, 12:00:00
+modified: 2018-02-16, 12:00:24
 tags: [testing, example2]
 comments: true
 category: blog
 ---
 
-test2
+More on this later.
