Image path change

--- a/_posts/2017-02-07-GP2GC-I.md
+++ b/_posts/2017-02-07-GP2GC-I.md
@@ -40,5 +40,5 @@ At this point plans have been made and bags are almost packed when Poppa shows c
 
 The first leg of the trip would get us to Amarillo, TX and be the most drastic change in vegetation for the time/distance traveled. It became really apparent the morning of day two when light allowed us to really take in the scrub type landscape. (I really wish I would have taken more pictures of the trip out).
 
-![On the road](aldridgecaleb.github.io/images/images/GP2GC/heading-west.jpg)
+![On the road](https://github.com/AldridgeCaleb/aldridgecaleb.github.io/images/GP2GC/heading-west.jpg)
 *Just west of Amarillo, TX; day 2*
