Revised grammar; edited image links

--- a/_posts/2017-02-07-GP2GC-I.md
+++ b/_posts/2017-02-07-GP2GC-I.md
@@ -4,41 +4,45 @@ title: Grandparents to the Grand Canyon
 excerpt: "Part I: Making plans and heading west"
 date: 2018-02-07, 13:00:00
 modified: 2018-02-16, 13:45:00
-tags: [GP2GC]
+tags: [GP2GC, travel]
 comments: true
 category: blog
 ---
 
-![Title slide GP2GC](aldridgecaleb.github.io/images/images/GP2GC/GP2GC.png)
+![Title slide GP2GC]("/images/images/GP2GC/GP2GC.png")
 
 ## Setting the stage(coach)
 
-> Quick note: This is the first of a short series of posts I am doing on a trip I and family took in August of 2016 and it may be a little longer and sappier than most are willing to endure. I lack the abilities of a good writer, so if you'd like to see photographs of our trip scroll to the bottom. After all, "One picture [is] worth ten thousand words" (Fred R. Barnard, 1927).
+> Quick note: This is the first in a short series about a trip I and family members took in August of 2016. It may be a little longer and sappier than some are willing to endure, and I'm not that captivating of a writier. So if you'd like to skip to the photographs of our trip click [here](link to photos in posts). After all, "One picture [is] worth ten thousand words" (Fred R. Barnard, 1927).
 
-I had the privilege of visiting the national park on a whirlwind trip with my future wife, her father and sister, and one of their close family friends in the spring of 2015. I knew then that I wanted my family to visit the same amazing places, _viz._ Grand Canyon National Park (NP), Zion NP, Bryce Canyon NP, Capitol Reef NP, Grand Staircase-Escalante National Monument, Canyonlands NP, Arches NP, and all the beautiful landscapes in between. I knew this would be a big undertaking—my family lives in a quiet, rural community where most are content and happy to live out their days without grand adventures (much like hobbits). Nevertheless, Christmas 2015 I ask for my paternal grandparents to visit the Grand Canyon as my gift that year.
+I had the privilege of visiting several Southwest U.S. national parks on a whirlwind trip with my then future wife, her father and sister, and one of their close family friends in the spring of 2015. On first glance of the Grand Canyon I needed to share this experience with my family. I wanted them to visit the same amazing places; [Grand Canyon National Park (NP)](https://www.nps.gov/grca/index.htm), [Zion NP](https://www.nps.gov/zion/index.htm), [Grand Staircase-Escalante National Monument](https://www.blm.gov/programs/national-conservation-lands/utah/grand-staircase-escalante-national-monument), [Arches NP](https://www.nps.gov/arch/index.htm), other [Southwest NPs](https://www.nps.gov/state/ut/index.htm), and all the beautiful landscapes in between. I knew this would be a big undertaking. My family lives in a quiet, rural community where they are content to live out their days without grand adventures---in this sense they remind me of the lovable Hobbits from Tolkien's world. Nevertheless, during Christmas 2015 I pressed my paternal grandparents to visit the Grand Canyon. I said that it was the only gift I wanted for that and the next few years; birthdays too.
 
-I hoped in some way it would be received without hesitation but knew there would be a myriad of excuses of why they shouldn't leave to go adventuring in far away lands. (To my later discovery, Poppa had never been more than a couple hundred miles from where he was born and raised and my Nana hadn't ventured much further).
+I hoped in some way my request would be granted without hesitation but I knew deep down there would be a myriad of excuses of why they shouldn't go adventuring in far away lands. (To my later discovery, Poppa had never been more than a couple hundred miles from where he was born and raised and my Nana hadn't ventured much further).
 
-> "Who will check on so-and-so? Who will tend to the garden? What about church bread?" (My grandparents' Church observes the Lord's Supper weekly, so someone must prepare unleavened bread for the ceremony.)
-_So-and-so has other friends. God and siblings can tend the garden. And, the other saints are very capable of following your recipe._
+> "Who will check on so-and-so? Who will tend to the garden? What about church bread?" (My grandparents' Church observes the Lord's Supper weekly, so someone must prepare unleavened bread for the ceremony and my grandmother makes certain the task gets done).
+
+_So-and-so has other friends, God and siblings can tend the garden, and the other saints are capable of following your recipe._
 
 > "When will we even go? How will we get there? Who will go with us?"
-_In the summer; train, plane, bus, or boat; anyone you need to get you there. I of course wanted and planned to go with them all along._
 
-The questions and excuses steadily faded as plans materialized. First week of August, by vehicle, eight (sometimes nine) trip-goers, and excitement all around.
+_Summer; train, plane, bus, or Gus (horse's name); anyone you need to get you there (I of course planned to go with them all along)._
+
+The questions and excuses steadily faded as plans materialized. We decided to go the first week of August, in personal vehicles, with eight (sometimes nine) trip-goers, and excitement all around. I also convinced them on the whirlwind style trip that made me fall in love with the region.
 
 ## "Two roads diverged"
 
-### A pit-stop
-My Poppa is a reserved person, at least until you spark a topic of conversation in which he is passionate. He then transforms from a seemingly quiet, simple, strong-gripped member of the country-folk to a passionate and wise intellectual. Though his occupation was that of a machinist and welder, a fervent will to read and learn makes him as knowledgeable and entertaining as any university lecturer. His area of expertise, however, can't be easily classified into an academic department.
+### Pit-stop (get to know the GPs)
 
-My Nana is a kind and mostly gentle person. I said kind because, though she is nice, she will offer advice or support that is helpful not just sweet. Sharp as a tack. She can manage almost any group of people through almost any formidable terrain (working as a postmaster for 20+ years lends proof to your substance). I watched her carry her family through its toughest times, but always with gentleness and understanding. Sometimes coming from nothing compels one to give all you have to others.
+My Poppa is a reserved person, at least until you spark a topic of conversation for which he is passionate. He then transforms from a quiet, rough-handed countryman to a buzzing and wise intellectual. His former occupation as a machinist and welder is deceiving. To the naive, it is surprising that he is as knowledgeable and entertaining as any university lecturer. It stems from his fervent love of reading and learning; his area of expertise, however, can't be easily classified into an academic department.
+
+My Nana is a kind and gentle person. She is kind but not always nice. I say that because, like the [KIND bar commercial](https://www.youtube.com/watch?v=ZKkAUFXajps), she is honest and doesn't just tell you things you want to hear. She is also sharp as a tack, witty too. She can manage almost any group of people through almost any formidable situation. (Nana worked as a postmaster for 20+ years, proof of her patience and tenacity). I've watched her carry her family through its toughest times. 
+
 
 ### Back on track
 
-At this point plans have been made and bags are almost packed when Poppa shows concern about the route to be taken. His reasoning is that we can broaden our sightseeing experience if we taken two different routes to and fro. An excellent suggestion. So, on the "to" to we decided to leave from our family's property in northwest Alabama headed west-southwest through Dallas, TX then west-northwest to Flagstaff, AZ (pictures with captions below). The "fro" would be to loop back through Farmington, NM and stay Interstate 40 till Memphis, TN and US-78/I-22 home.
+Plans have been made and bags are nearly packed when Poppa has concerns about the route to be taken (i.e., will we be getting the most out of our route?). His reasoning is that we can diversify our sightseeing experience if we take different routes to and fro. An excellent suggestion. So, on the "to" route we decided to head west-southwest through Dallas, TX from our family's property in northwest Alabama. We'd then go west-northwest to Flagstaff, AZ. The "fro" would go through Farmington, NM and stay Interstate 40 till Memphis, TN then take US-78/I-22 home.
 
-The first leg of the trip would get us to Amarillo, TX and be the most drastic change in vegetation for the time/distance traveled. It became really apparent the morning of day two when light allowed us to really take in the scrub type landscape. (I really wish I would have taken more pictures of the trip out).
+The first leg of the to trip would get us to Amarillo, TX. This would be the most drastic change in vegetation we'd experience for the time/distance traveled. This was really apparent the morning of day two when the morning light allowed us to take in the scrub landscape; much less green and 1/4 the height of trees back home. There's a highway snapshot of the scrub below.
 
-![On the road](https://github.com/AldridgeCaleb/aldridgecaleb.github.io/images/GP2GC/heading-west.jpg)
+![On the road]("/images/GP2GC/heading-west.jpg")
 *Just west of Amarillo, TX; day 2*
