Image path edits
Changed the author-bio picture path in ./_includes/_autho-bio.html. Uploaded pictures to flickr; updated flickr link on bio. Used urls from flickr to imbed images in blog post.

--- a/_posts/2017-02-07-GP2GC-I.md
+++ b/_posts/2017-02-07-GP2GC-I.md
@@ -9,7 +9,7 @@ comments: true
 category: blog
 ---
 
-![Title-slide-GP2GC](https://github.com/AldridgeCaleb/aldridgecaleb.github.io/images/GP2GC/GP2GC.png)
+![Title-slide-GP2GC](https://farm5.staticflickr.com/4740/25490516257_dd1fac5bfb_b.jpg)
 
 ## Setting the stage(coach)
 
@@ -35,7 +35,7 @@ The questions and excuses steadily faded as plans materialized. We decided to go
 
 My Poppa is a reserved person, at least until you spark a topic of conversation for which he is passionate. He then transforms from a quiet, rough-handed countryman to a buzzing and wise intellectual. His former occupation as a machinist and welder is deceiving. To the naive, it is surprising that he is as knowledgeable and entertaining as any university lecturer. It stems from his fervent love of reading and learning; his area of expertise, however, can't be easily classified into an academic department.
 
-My Nana is a kind and gentle person. She is kind but not always nice. I say that because, like the [KIND bar commercial](https://www.youtube.com/watch?v=ZKkAUFXajps), she is honest and doesn't just tell you things you want to hear. She is also sharp as a tack, witty too. She can manage almost any group of people through almost any formidable situation. (Nana worked as a postmaster for 20+ years, proof of her patience and tenacity). I've watched her carry her family through its toughest times. 
+My Nana is a kind and gentle person. She is kind but not always nice. I say that because, like the [KIND bar commercial](https://www.youtube.com/watch?v=ZKkAUFXajps), she is honest and doesn't just tell you things you want to hear. She is also sharp as a tack, witty too. She can manage almost any group of people through almost any formidable situation. (Nana worked as a postmaster for 20+ years, proof of her patience and tenacity). I've watched her carry her family through its toughest times.
 
 
 ### Back on track
@@ -44,5 +44,5 @@ Plans have been made and bags are nearly packed when Poppa has concerns about th
 
 The first leg of the to trip would get us to Amarillo, TX. This would be the most drastic change in vegetation we'd experience for the time/distance traveled. This was really apparent the morning of day two when the morning light allowed us to take in the scrub landscape; much less green and 1/4 the height of trees back home. There's a highway snapshot of the scrub below.
 
-![On-the-road](https://github.com/AldridgeCaleb/aldridgecaleb.github.io/images/GP2GC/heading-west.jpg)
+![On-the-road](https://farm5.staticflickr.com/4670/40362238941_1e88cfba8e_b.jpg)
 *Just west of Amarillo, TX; day 2*
