First version of GP2GC II

--- a/_posts/2018-02-14-GP2GC-II.md
+++ b/_posts/2018-02-14-GP2GC-II.md
@@ -4,9 +4,47 @@ title: Grandparents to the Grand Canyon
 excerpt: "Part II: Arrival at Grand Canyon National Park"
 date: 2018-02-14, 12:00:00
 modified: 2018-02-16, 12:00:24
-tags: [GP2GC, Grand Canyon National Park, GCNP]
+tags: [GP2GC, Grand Canyon National Park, GCNP, travel]
 comments: true
 category: blog
 ---
 
-More on this later.
+## Get some sleep
+
+In [Part I](https://aldridgecaleb.github.io/blog/GP2GC-I/) of this series I gave a briefing on travel plans of getting my paternal grandparents to the Grand Canyon and beyond. When I left off, we had just arrived at our hotel the evening before we were to visit GCNP.
+
+"...[E]veryone was buzzing with excitement..." and for different reasons. On this trip had come myself, my paternal grandparents (aka, Nana and Poppa), my Mom (Amy), Dad (Robert), and brother (David), and an uncle-in-law (Uncle Bryan) and first cousin (Cade). For Nana and Poppa, traveling was always something they had wanted to do together but always felt a tinge of guilt in doing something for themselves. They both came from families that worked hard and never really got far ahead. To them, money is more about saving and giving than indulging. I eased their guilt (I hope) by offering a Bible verse, "Moreover, when God gives someone wealth and possessions, and the ability to enjoy them, to accept their lot and be happy in their toil--this is a gift of God." (Ecclesiastes 5:19, NIV). I also offered that this trip was more about building memories and strengthening family ties than spending on ourselves.
+
+For Mom, this was partially a return trip; one she experienced as a teen with her family. It was special for her as she was now able to share with her children. Dad had traveled all over the U.S. and Europe for business but little time was available on those trips to actually see any natural wonders. Most of our family vacations were either short-lived on a couple of the business trips or taken at places near home---places amazing and wonderful in their own right but not on the scale of wonders in the Southwest. Both Mom and Dad had degrees in Geography, so this was all right up their ally. All my love for the outdoors, natural history, and wildlife started with them.
+
+David and I are five years apart and generally have different interest. In truth, he's a homebody, hates long drives, and would rather "do" something than see it. Although he and I differ in many ways, and really don't see or talk all that often, he's one of my best friends. For him, this was going to be an uplifting experience. He seems pretty tough--works with his hands, stands at 6'3", weighs about 220 lbs., has a sleeve tattoo, and wears a scruffy beard--but really is a softie. He's always been tender-hearted and wants the best for other people. It makes him a loyal and trusting person. The next morning would be special for him, even if he didn't say so.
+
+My Uncle Bryan is an avid outdoorsman. He even works outside in his profession. I think I was mostly an annoyance to him as a kid but we've become buds since. We'll hunt together once or twice a year and chat about wildlife and natural history. His son, Cade, was 12 at the time and really enthusiastic about travel/outdoors and being inspired (we all think he has good artistic abilities). They were inseparable and I'm not sure if they slept a wink. You could tell they'd both treasure the trip.
+
+For me, it was exciting to be back in those amazing landscapes with loved ones. (I really wished my wife (Randi) was on this return trip but she was finishing up a college degree and prepping for graduate studies). I had mounds of anticipation building. I was already on a high of just being on a trip with family and knew how powerful and humbling it is when looking into that grand abyss. Really, it's beyond words; the mix of emotions I felt that night. For me, there's few things that are as moving as gazing from high vistas.
+
+Thank goodness the drive had worn us a little or we'd have never gotten any rest that night.
+
+## "What a gully"
+
+My first reaction (2015 trip) to seeing the Grand Canyon was one of sheer humbleness. I could do nothing but crying in awe for the first 20 minutes. This time was only slightly buffered by having the experience once before. My opinion is that of Theodore Roosevelt,
+
+>"Let this great wonder of nature remain as it now is... You cannot improve on it. But what you can do is keep it for your children, your children’s children, and all who come after you, as __the one great sight which every American should see__."
+
+I was happy to see that my grandparents felt the same. They smiled in amazement. Gave one another a hug and cried softly at how overwhelming the sight truly is. The feeling seemed to be mutual for everyone; we were all smiling from ear to ear. This moment was worth the whole world to me.
+
+Poppa summed up the moment with Southern charisma, "What a gully," he said.
+
+And what a gully indeed.
+
+![posing-at-the-gully](https://farm5.staticflickr.com/4716/40362238491_b132b11cd2_b.jpg)
+*Grand squared.*
+
+![South Rim looking northeast](https://farm5.staticflickr.com/4760/40362237811_7fa049f67a_b.jpg)
+*At the South Rim (i.e., GC Village) looking northeast.*
+
+![South Rim looking northwest](https://farm5.staticflickr.com/4630/26491290128_d38d2da5f8_b.jpg)
+*At the South Rim looking northwest.*
+
+![GC amazing view](https://farm5.staticflickr.com/4623/40362235811_e83858d00c_b.jpg)
+*Grandview Point, east of South Rim.*
