Additon of GP2GC Part III

--- a/_posts/2018-02-14-GP2GC-II.md
+++ b/_posts/2018-02-14-GP2GC-II.md
@@ -4,7 +4,7 @@ title: Grandparents to the Grand Canyon
 excerpt: "Part II: Arrival at Grand Canyon National Park"
 date: 2018-02-14, 12:00:00
 modified: 2018-02-16, 12:00:24
-tags: [GP2GC, Grand Canyon National Park, GCNP, travel]
+tags: [GP2GC, travel, Grand Canyon National Park, GCNP]
 comments: true
 category: blog
 ---
