--- a/_posts/2018-02-07-GP2GC-I.md
+++ b/_posts/2018-02-07-GP2GC-I.md
@@ -45,7 +45,7 @@ Plans have been made and bags are nearly packed when Poppa has concerns about th
 The first leg of the to trip would get us to Amarillo, TX. This would be the most drastic change in vegetation we'd experience for the time/distance traveled. This was really apparent the morning of day two when the morning light allowed us to take in the scrub landscape; much less green and 1/4 the height of trees back home. There's a highway snapshot of the scrub below.
 
 ![On-the-road](https://farm5.staticflickr.com/4670/40362238941_1e88cfba8e_b.jpg)
-*Just west of Amarillo, TX; day 2*
+*Just west of Amarillo, TX; day 2.*
 
 
 ## The anticipation builds
