GP2GC-II edit to ending

--- a/_posts/2018-02-14-GP2GC-II.md
+++ b/_posts/2018-02-14-GP2GC-II.md
@@ -51,3 +51,5 @@ And what a gully indeed.
 
 ![Watchtower](https://farm5.staticflickr.com/4678/40362234501_eb7ab3e1bd_z.jpg)  
 *View from Desert View Watchtower.*
+
+More to come...
