Posts' title edit

--- a/_posts/2018-02-07-GP2GC-I.md
+++ b/_posts/2018-02-07-GP2GC-I.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Grandparents to the Grand Canyon
-excerpt: "Part I: Making plans and heading west"
+title: Grandparents to the Grand Canyon, Part I
+excerpt: "Making plans and heading west"
 date: 2018-02-07, 13:00:00
 modified: 2018-02-16, 13:45:00
 tags: [GP2GC, travel]
