--- a/_posts/2018-02-21-GP2GC-III.md
+++ b/_posts/2018-02-21-GP2GC-III.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Grandparents to the Grand Canyon
-excerpt: "Part III: Red cliffs, a holy valley, and hoodid what? "
+title: Grandparents to the Grand Canyon, Part III
+excerpt: "Red cliffs, a holy valley, and hoodid what? "
 date: 2018-02-14, 12:00:00
 modified: 2018-02-16, 12:00:24
 tags: [GP2GC, travel, Zion, ZNP, Bryce Canyon, BCNP, Vermilion Cliffs, VCNM]
